        Reviewed by Darin.

Patch for http://bugs.webkit.org/show_bug.cgi?id=13707
        REGRESSION: JavaScript exceptions on quotes.burntelectrons.org

        http://bugs.webkit.org/show_bug.cgi?id=12628
        document.body is not supported in XHTML documents

        http://bugs.webkit.org/show_bug.cgi?id=14213
        On page with MIME type application/xhtml+xml, cookie don't work

WebCore:
        Moved a bunch of methods and properties from HTMLDocument down into Document to make
        them available for all documents (xml, svg).
        What was kept in HTMLDocument:
        - some methods and properties that are not in HTML5 (yet?);
        - open/write/writeln/close, as they will need to be modified to work on XML documents, and aren't
        of much use for those anyway;
        - designMode, because its definition in HTML5 is incompatible with our implementation.

        Covered by existing tests.

        * bindings/js/JSDocumentCustom.cpp:
        (WebCore::JSDocument::location):
        (WebCore::JSDocument::setLocation):
        * bindings/js/JSHTMLDocumentCustom.cpp:
        * bindings/objc/PublicDOMInterfaces.h:
        * dom/Document.cpp:
        (WebCore::Document::setBody):
        (WebCore::Document::cookie):
        (WebCore::Document::setCookie):
        (WebCore::Document::lastModified):
        * dom/Document.h:
        (WebCore::Document::title):
        * dom/Document.idl:
        * html/HTMLDocument.cpp:
        * html/HTMLDocument.h:
        * html/HTMLDocument.idl:

LayoutTests:
        * dom/xhtml/level2/html/HTMLBaseElement01-expected.checksum: Removed.
        * dom/xhtml/level2/html/HTMLBaseElement01-expected.png: Removed.
        * dom/xhtml/level2/html/HTMLBaseElement01-expected.txt:
        * dom/xhtml/level2/html/HTMLBaseElement01.xhtml:
        * dom/xhtml/level2/html/HTMLBaseElement02-expected.checksum: Removed.
        * dom/xhtml/level2/html/HTMLBaseElement02-expected.png: Removed.
        * dom/xhtml/level2/html/HTMLBaseElement02-expected.txt:
        * dom/xhtml/level2/html/HTMLBaseElement02.xhtml:
        * dom/xhtml/level2/html/HTMLBodyElement07-expected.txt:
        * dom/xhtml/level2/html/HTMLBodyElement08-expected.txt:
        * dom/xhtml/level2/html/HTMLBodyElement09-expected.txt:
        * dom/xhtml/level2/html/HTMLBodyElement10-expected.txt:
        * dom/xhtml/level2/html/HTMLBodyElement11-expected.txt:
        * dom/xhtml/level2/html/HTMLBodyElement12-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument01-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument02-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument03-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument05-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument07-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument08-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument09-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument10-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument11-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument12-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument13-expected.txt:
        * dom/xhtml/level2/html/HTMLDocument14-expected.txt:
        * dom/xhtml/level2/html/doc01-expected.txt:
        These now pass. Changed HTMLBaseElement* to dump as text.

        * fast/dom/Window/window-properties-expected.txt: Added Document.prototype.getElementsByName



Canonical link: https://commits.webkit.org/20489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26499 268f45cc-cd09-0410-ab3c-d52691b4dbfc