WebCore/bindings/objc/PublicDOMInterfaces.h
@@ -80,6 +80,17 @@
 @property(readonly, retain) DOMElement *documentElement;
 @property(readonly, retain) DOMAbstractView *defaultView;
 @property(readonly, retain) DOMStyleSheetList *styleSheets;
+@property(readonly, retain) DOMHTMLCollection *images;
+@property(readonly, retain) DOMHTMLCollection *applets;
+@property(readonly, retain) DOMHTMLCollection *links;
+@property(readonly, retain) DOMHTMLCollection *forms;
+@property(readonly, retain) DOMHTMLCollection *anchors;
+@property(copy) NSString *title;
+@property(readonly, copy) NSString *referrer;
+@property(readonly, copy) NSString *domain;
+@property(readonly, copy) NSString *URL;
+@property(retain) DOMHTMLElement *body;
+@property(copy) NSString *cookie;
 - (DOMElement *)createElement:(NSString *)tagName;
 - (DOMDocumentFragment *)createDocumentFragment;
 - (DOMText *)createTextNode:(NSString *)data;
@@ -109,6 +120,7 @@
 - (DOMCSSStyleDeclaration *)getComputedStyle:(DOMElement *)element pseudoElement:(NSString *)pseudoElement;
 - (DOMCSSRuleList *)getMatchedCSSRules:(DOMElement *)element pseudoElement:(NSString *)pseudoElement;
 - (DOMCSSRuleList *)getMatchedCSSRules:(DOMElement *)element pseudoElement:(NSString *)pseudoElement authorOnly:(BOOL)authorOnly;
+- (DOMNodeList *)getElementsByName:(NSString *)elementName;
 #ifdef ENABLE_XPATH
 - (DOMXPathExpression *)createExpression:(NSString *)expression :(id <DOMXPathNSResolver>)resolver;
 - (DOMXPathExpression *)createExpression:(NSString *)expression resolver:(id <DOMXPathNSResolver>)resolver;
@@ -347,23 +359,11 @@
 @end
 
 @interface DOMHTMLDocument : DOMDocument
-@property(copy) NSString *title;
-@property(readonly, copy) NSString *referrer;
-@property(readonly, copy) NSString *domain;
-@property(readonly, copy) NSString *URL;
-@property(retain) DOMHTMLElement *body;
-@property(readonly, retain) DOMHTMLCollection *images;
-@property(readonly, retain) DOMHTMLCollection *applets;
-@property(readonly, retain) DOMHTMLCollection *links;
-@property(readonly, retain) DOMHTMLCollection *forms;
-@property(readonly, retain) DOMHTMLCollection *anchors;
-@property(copy) NSString *cookie;
 - (void)open;
 - (void)close;
 - (void)write:(NSString *)text;
 - (void)writeln:(NSString *)text;
 - (DOMElement *)getElementById:(NSString *)elementId;
-- (DOMNodeList *)getElementsByName:(NSString *)elementName;
 @end
 
 @interface DOMHTMLElement : DOMElement
