WebCore/dom/Document.h
@@ -213,11 +213,6 @@ public:
     
     PassRefPtr<NameNodeList> getElementsByName(const String& elementName);
 
-    // Actually part of JSHTMLDocument, but used for giving XML documents a window title as well
-    String title() const { return m_title; }
-    void setTitle(const String&, Element* titleElement = 0);
-    void removeTitle(Element* titleElement);
-
     PassRefPtr<HTMLCollection> images();
     PassRefPtr<HTMLCollection> embeds();
     PassRefPtr<HTMLCollection> plugins(); // an alias for embeds() required for the JS DOM bindings.
@@ -547,12 +542,21 @@ public:
     // Returns the owning element in the parent document.
     // Returns 0 if this is the top level document.
     Element* ownerElement() const;
-    
+
+    String title() const { return m_title; }
+    void setTitle(const String&, Element* titleElement = 0);
+    void removeTitle(Element* titleElement);
+
+    String cookie() const;
+    void setCookie(const String&);
+
     String referrer() const;
 
     String domain() const;
     void setDomain(const String& newDomain);
     void setDomainInternal(const String& newDomain);
+
+    String lastModified() const;
 
     String policyBaseURL() const { return m_policyBaseURL; }
     void setPolicyBaseURL(const String& s) { m_policyBaseURL = s; }
@@ -575,6 +579,8 @@ public:
     HTMLMapElement* getImageMap(const String& URL) const;
 
     HTMLElement* body();
+    void setBody(PassRefPtr<HTMLElement>, ExceptionCode&);
+
     HTMLHeadElement* head();
 
     String toString() const;
