WebCore/html/HTMLDocument.h
@@ -38,12 +38,6 @@ public:
 
     virtual bool isHTMLDocument() const { return true; }
 
-    String lastModified() const;
-    String cookie() const;
-    void setCookie(const String&);
-
-    void setBody(HTMLElement*, ExceptionCode&);
-
     int width();
     int height();
 
